backend/backend.log

> backend@1.0.0 start
> node src/server.js

/home/snu/HelloWorld/Sports-scholarship1/backend/node_modules/mongodb/lib/bulk/common.js:56
        this.insertedCount = this.result.nInserted ?? 0;
                                                    ^

SyntaxError: Unexpected token '?'
    at wrapSafe (internal/modules/cjs/loader.js:915:16)
    at Module._compile (internal/modules/cjs/loader.js:963:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:85:18)
    at Object.<anonymous> (/home/snu/HelloWorld/Sports-scholarship1/backend/node_modules/mongoose/lib/drivers/node-mongodb-native/bulkWriteResult.js:3:25)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
